--- a/files/style.css
+++ b/files/style.css
@@ -148,6 +148,7 @@ body.dark-mode {
 .chat-header {
     display: grid;
     grid-template-areas: "user-info room-info actions";
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     padding: 0.75rem 1rem;
     border-bottom: 1px solid var(--border-color);
@@ -183,6 +184,7 @@ body.dark-mode {
 }
 
 .message-area {
+    position: relative;
     flex: 1;
     padding: 1rem;
     overflow-y: auto;
@@ -516,5 +518,112 @@ button.header-btn {
         height: 100svh;
         min-height: 100svh;
         max-height: 100svh;
+    }
+}
+
+
+/* From Uiverse.io by Fernando-sv */ 
+.loader {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  z-index: 10;
+  width: 36px;
+  height: 36px;
+  padding: 18px;
+  border: 4px solid var(--main-color);
+  border-left-color: transparent;
+  border-radius: 50%;
+  box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+}
+.loader {
+  animation: spin89345 1s linear infinite, popIn 1s ease-out;
+}
+
+.loader.pop-in {
+  animation: popIn 1s ease-out, spin89345 1s linear infinite 0.2s;
+}
+
+@keyframes spin89345 {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes popIn {
+  0% {
+    transform: scale(0) rotate(0deg);
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.3;
+  }
+  60% {
+    transform: scale(1.15) rotate(180deg);
+    opacity: 0.8;
+  }
+  80% {
+    transform: scale(0.95) rotate(270deg);
+    opacity: 0.95;
+  }
+  100% {
+    transform: scale(1) rotate(360deg);
+    opacity: 1;
+  }
+}
+
+@keyframes popOut {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+
+.loader.pop-out {
+  animation: popOut 0.3s ease-in forwards;
+}
+
+.message-blank {
+    height: 20px; /* Adjust height as needed */
+    padding: 20px;
+    width: 100%;
+}
+
+.message-blank {
+    animation: blankIn 0.2s ease-out forwards;
+}
+
+.message-blank.removing {
+    animation: blankOut 0.2s ease-in forwards;
+}
+
+@keyframes blankIn {
+    0% {
+        height: 0;
+        padding: 0;
+    }
+    100% {
+        height: 20px; /* Match the final height */
+        padding: 20px;
+    }
+}
+@keyframes blankOut {
+    0% {
+        height: 20px; /* Match the initial height */
+        padding: 20px;
+    }
+    100% {
+        height: 0;
+        padding: 0;
     }
 }
